# DiscordBot

./: .dockerignore  .envrc  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-deploy.yml  build-push.yml  main.yml  notify-complete.yml  notify-start.yml
bot/: __main__.py  bot-test.py  bot.py  discord_bot.py  dropdown.py  responses.py  xsoar.py
bot/xsoar/: xsoar.py
